syntax = "proto3";

package grpc_proto;
option go_package = "potato/demo-protocolbuffer-grpc/grpc";
option java_package = "me.potato.grpc.lib";

service SampleService{
  rpc GetAllSamples(GetAllSamplesRequest) returns (GetAllSamplesResponse){
  }
}

message Sample {
  uint32 id = 1;
  string data = 2;
}

message GetAllSamplesRequest {
  uint32  max = 1;
  string data = 2;
}

message GetAllSamplesResponse {
  repeated grpc_proto.Sample samples = 1;
}